--- a/styles.css
+++ b/styles.css
@@ -58,12 +58,12 @@ aside ul {
 
 /* section  */
 
-section {
+#dashboard-section {
   padding-left: 73px;
   padding-top: 65px;
 }
 
-section h2 {
+#dashboard-section h2 {
   color: #515151;
   font-family: "Poppins", sans-serif;
   font-size: 24px;
@@ -72,7 +72,7 @@ section h2 {
   line-height: normal;
 }
 
-section h3 {
+#dashboard-section h3 {
   color: #333;
   font-family: "Poppins", sans-serif;
   font-size: 18px;
@@ -81,12 +81,12 @@ section h3 {
   line-height: normal;
 }
 
-.box-container {
+#dashboard-section .box-container {
   display: flex;
   gap: 42px;
 }
 
-.box {
+#dashboard-section .box {
   width: 243px;
   height: 150px;
 
@@ -95,7 +95,7 @@ section h3 {
   text-align: center;
 }
 
-.box h2 {
+#dashboard-section .box h2 {
   color: #fff;
   font-family: "Poppins", sans-serif;
   font-size: 36px;
@@ -105,7 +105,7 @@ section h3 {
   margin-bottom: 0;
 }
 
-.box p {
+#dashboard-section .box p {
   color: #fff;
   font-family: "Poppins", sans-serif;
   font-size: 12px;
@@ -114,13 +114,13 @@ section h3 {
   line-height: normal;
 }
 
-.info-wrapper {
+#dashboard-section .info-wrapper {
   display: flex;
   justify-content: space-evenly;
   flex-direction: column;
 }
 
-.info {
+#dashboard-section .info {
   padding-left: 39px;
   padding-right: 19px;
   display: flex;
@@ -128,7 +128,7 @@ section h3 {
   justify-content: space-between;
 }
 
-.info p {
+#dashboard-section .info p {
   color: #4f4f4f;
   font-family: Poppins;
   font-size: 18px;
@@ -136,7 +136,7 @@ section h3 {
   font-weight: 700;
   line-height: normal;
 }
-#second-info-wrapper{
+#dashboard-section #second-info-wrapper{
   margin: -9px;
  
 }
