--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,14 @@
 
 body {
   width: 1440px;
-  margin:  auto;
+  margin: auto;
   padding: 0;
 }
+
 main {
   display: flex;
 }
+
 aside {
   width: 400px;
   height: 900px;
@@ -25,12 +27,14 @@ aside a {
 aside h1 {
   padding-top: 64px;
 }
+
 aside h1 a {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 16px;
 }
+
 nav {
   height: inherit;
 }
@@ -136,7 +140,39 @@ aside ul {
   font-weight: 700;
   line-height: normal;
 }
-#dashboard-section #second-info-wrapper{
+
+#dashboard-section #second-info-wrapper {
   margin: -9px;
- 
+
+}
+
+
+.buttons-nav {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+
+.buttons-nav button {
+  color: #FFF;
+  cursor: pointer;
+  font-family: Poppins;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: capitalize;
+  width: 300px;
+  height: 60px;
+  flex-shrink: 0;
+  background: #333;
+
+}
+
+#index-aside ul {
+  padding: unset;
+  height: unset;
+  position: fixed;
+  top: 249px;
+  left: 44px;
 }
