--- a/styles.css
+++ b/styles.css
@@ -153,7 +153,7 @@ aside ul {
   gap: 50px;
 }
 
-.buttons-nav button {
+.buttons-nav a {
   color: #FFF;
   cursor: pointer;
   font-family: Poppins;
@@ -166,15 +166,20 @@ aside ul {
   height: 60px;
   flex-shrink: 0;
   background: #333;
-
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #index-aside ul {
   padding: unset;
   height: unset;
-  position: absolute;
+  position: relative;
   top: 249px;
   left: 44px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
 }
 
 .index-container {
